# QR-Code-Classifcation-and-Detection

./: .gitignore  README.md  Training_Iterations.md  pyproject.toml
config/: dataset_config.yaml  model_config.yaml
notebooks/: 01_train_model.ipynb  corner_detection_experiment.ipynb  filter_comparison.ipynb  global_roi_analysis.ipynb  keras_model_final.ipynb  roi_playground.ipynb  temp.ipynb  test2_keras_model.ipynb  test_keras_model.ipynb  test_keras_model_mehr_patches.ipynb  test_keras_model_sum_probabilty.ipynb  test_keras_model_ursprungsmodel.ipynb  texture_energy_filter.ipynb  two_stage_filter_experiment.ipynb
notebooks/tmp_matplotlib_cache/: fontlist-v390.json
runs/20251231_124722_run_01_baseline_cnn/: config.yaml  final_model.keras  training_log.csv
runs/20251231_124722_run_01_baseline_cnn/checkpoints/: best_model.keras
runs/run_02_batch_norm_learning_rate_20260107_184958/: config.yaml  final_model.keras  training_log.csv
runs/run_03_deep_cnn_flatten_20260107_195310/: config.yaml  training_log.csv
runs/run_04_deep_cnn_augmented_20260107_205951/: config.yaml  training_log.csv
runs/run_05_gentler_augmentation_20260108_161610/: config.yaml  training_log.csv
runs/run_06_dataset_improvements_metrics_20260109_202000/: config.yaml  training_log.csv
scripts/: build_dataset.py  detect_roi.py  model_builder.py  project_paths.py  remove_duplicates.py  roi_detection_&_sliding_window.py  roi_sliding.py  test_roi_opencv.py  training_data_generator.py  try_marlon.py  verify_dataset.py
scripts/extraktion_ergebnis/: metadata.csv
(+13 files in other folders)
