[project]
name = "qr-classifier"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "matplotlib",
    "scikit-learn",
    "numpy",
    "ipywidgets",
    "jupyterlab",
    "tqdm",
    "qrcode[pil]",
    "tensorflow[and-cuda]",
    "PyYAML",
    "pydot",
    "graphviz",
    "ImageHash",
    "PyQt6",
    "pyzbar>=0.1.9",
    "opencv-contrib-python>=4.13.0.90",
    "requests>=2.32.5",
]
